--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>I,M Ahmed Sagor</span></h1>
             <p>This is my official Portfolio website to showcase my 
                 all works related to <br> web development and my work's </p>
-            <a href="#">Downdload CV</a>
+            <a href="C:\Users\USER\Downloads\Video\CV/MY CV.pdf">Downdload CV</a>
         </div>
         <div class="images">
             <img src="images/shape.png" class="shape">
